--- a/index1.html
+++ b/index1.html
@@ -209,9 +209,8 @@
                 <hr><br>
             </div>          
         </form>
-        
     </main>
-    <div>
+    <div id="campoAdc">
         <button onclick="adicionarCampo()">Adicionar campo</button>
         <div id="campos"></div>
     </div>
